--- a/app/partials/modalBuscarPedido.html
+++ b/app/partials/modalBuscarPedido.html
@@ -1,68 +1,118 @@
 <div class="meu-modal">
 
   <div class="header">
-    <div class="title"><span class="glyphicon glyphicon-shopping-cart"></span>&nbsp; Buscar Orçamento <span class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
+    <div class="title"><span class="glyphicon glyphicon-shopping-cart"></span> Buscar Orçamento <span class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
   </div>
 
-  <div class="body">
+  <div class="body condensar-rows">
 
     <div class="container">
-      <div class="row">
+
+      <div class="filtros" ng-if="false">
+
+        <div class="row well">
+          <div class="col-md-3" ng-show="filtros.contains('pedido')">
+            <div class="filtro-sm pedido">
+              <table>
+                <tr>
+                  <td><input type="text" class="" ng-model="cdPedido" placeholder="código"></td>
+                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('pedido')"></span></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+          <div class="col-md-9" ng-show="filtros.contains('vendedor')">
+            <div class="filtro-lg vendedor">
+              <table>
+                <tr>
+                  <td><input type="text" class="" ng-model="cdVendedor" placeholder="código"></td>
+                  <td><input type="text" class="" ng-model="nmVendedor" placeholder="nome do vendedor"></td>
+                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('vendedor')"></span></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+          <div class="col-md-9" ng-show="filtros.contains('cliente')">
+            <div class="filtro-lg cliente">
+              <table>
+                <tr>
+                  <td><input type="text" class="" ng-model="cdCliente" placeholder="código"></td>
+                  <td><input type="text" class="" ng-model="nmCliente" placeholder="nome do cliente"></td>
+                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('cliente')"></span></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+          <div class="col-md-3" ng-show="filtros.contains('data-inicial')">
+            <div class="filtro-sm data-inicial">
+              <table>
+                <tr>
+                  <td><input type="text" class="" ng-model="dtInicial" ui-mask="99/99/9999"></td>
+                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('data')"></span></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+          <div class="col-md-3" ng-show="filtros.contains('data-final')">
+            <div class="filtro-sm data-final">
+              <table>
+                <tr>
+                  <td><input type="text" class="" ng-model="dtInicial" ui-mask="99/99/9999"></td>
+                  <td><span class="glyphicon glyphicon-remove close" ng-click="removeFiltro('data')"></span></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-9">
+            <a href="" class="badge pedido" ng-click="addFiltro('pedido')">Pedido (código)</a>
+            <a href="" class="badge vendedor" ng-click="addFiltro('vendedor')">Vendedor (código ou nome)</a>
+            <a href="" class="badge cliente" ng-click="addFiltro('cliente')">Cliente (código ou nome)</a>
+            <a href="" class="badge data-inicial" ng-click="addFiltro('data-inicial')">Data Inicial</a>
+            <a href="" class="badge data-final" ng-click="addFiltro('data-final')">Data Final</a>
+          </div>
+          <div class="col-md-3">
+            <button class="btn btn-default botao-esticado" ng-click="buscar()"><span class="glyphicon glyphicon-search"></span> Buscar</button>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row" ng-repeat="filtro in filtros track by $index" ng-show="false">
         <div class="col-md-3">
           <h4>Filtro</h4>
-          <select class="form-control" ng-init="opt='pedido'" ng-model="opt">
-            <option value="pedido">Pedido (código)</option>
-            <option value="vendedor">Vendedor (código ou nome)</option>
-            <option value="cliente">Cliente (código ou nome)</option>
-            <option value="data">Data (inicial / final)</option>
+          <select class="form-control" ng-init="opt = filtro" ng-model="opt" ng-change="filtros[$index] = opt">
+            <option value="{{opcao.valor}}" ng-selected="opt===opcao.valor" ng-disabled="filtros.contains(opcao.valor)" ng-repeat="opcao in opcoes">{{opcao.nome}} {{opcao.desc}}</option>
           </select>
         </div>
 
         <div class="col-md-3" ng-show="opt == 'pedido'">
           <h4>Código</h4>
-          <input type="number" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" press-enter="buscarPorCodigoPedido(cdPedido)">
-        </div>
-        <div class="col-md-3" ng-show="opt == 'pedido'">
-          <h4>&nbsp;</h4>
-          <button class="btn btn-default"  ng-click="buscarPorCodigoPedido(cdPedido)"><span class="glyphicon glyphicon-search"></span> Buscar</button>
+          <input type="text" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" press-enter="buscarPorCodigoPedido(cdPedido)" ui-mask="999999">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'vendedor'">
           <h4>Código</h4>
-          <div class="input-group">
-            <input type="number" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" press-enter="buscarPorCodigoVendedor(cdVendedor)">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorCodigoVendedor(cdVendedor)"><span class="glyphicon glyphicon-search"></span></button>
-            </span>
-          </div>
+          <input type="text" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" press-enter="buscarPorCodigoVendedor(cdVendedor)" ui-mask="9999">
         </div>
         <div class="col-md-6" ng-show="opt == 'vendedor'">
           <h4>Nome</h4>
-          <div class="input-group">
-            <input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" press-enter="buscarPorNomeVendedor(nmVendedor)">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorNomeVendedor(nmVendedor)"><span class="glyphicon glyphicon-search"></span></button>
-            </span>
-          </div>
+          <input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" press-enter="buscarPorNomeVendedor(nmVendedor)">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'cliente'">
           <h4>Código</h4>
-          <div class="input-group">
-            <input type="number" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" press-enter="buscarPorCodigoCliente(cdCliente)">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorCodigoCliente(cdCliente)"><span class="glyphicon glyphicon-search"></span></button>
-            </span>
-          </div>
+          <input type="text" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" press-enter="buscarPorCodigoCliente(cdCliente)" ui-mask="999999">
         </div>
         <div class="col-md-6" ng-show="opt == 'cliente'">
           <h4>Nome</h4>
-          <div class="input-group">
-            <input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" press-enter="buscarPorNomeCliente(nmCliente)">
-            <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorNomeCliente(nmCliente)"><span class="glyphicon glyphicon-search"></span></button>
-            </span>
-          </div>
+          <input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" press-enter="buscarPorNomeCliente(nmCliente)">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'data'">
@@ -73,12 +123,89 @@
           <h4>Final</h4>
           <input type="text" class="form-control" name="dtFinal" aria-describedby="basic-addon2" ng-model="dtFinal" press-enter="" ui-mask="99/99/9999" model-view-value="true">
         </div>
-        <div class="col-md-3" ng-show="opt == 'data'">
-          <h4>&nbsp;</h4>
-          <button class="btn btn-default" ng-click="buscarPorData(dtInicial, dtFinal)"><span class="glyphicon glyphicon-search"></span> Buscar</button>
-        </div>
 
       </div>
+
+      <div class="row">
+        <div class="col-md-2">
+          <h4>Orçamento</h4>
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" press-enter="buscar()">
+              <span class="input-group-btn">
+                <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="cdPedido=''"></span></button>
+              </span>
+            </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Data Inicial</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" press-enter="buscar()">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="dtInicial=''"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Data Final</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" press-enter="buscar()">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="dtFinal=''"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h4>Vendedor</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-value="vendedor.codigo + (vendedor.codigo?' - ':'') + vendedor.nome" placeholder="Clique na lupa para buscar um vendedor" readonly="true" press-enter="buscar()">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="removeVendedor()"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarVendedor()"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h4>Cliente</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar um cliente" readonly="true">
+            <span class="input-group-btn">
+              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="removeCliente()"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <h4>Status</h4>
+          <input type="text" class="form-control" readonly="true">
+        </div>
+        <div class="col-md-2">
+          <h4>&nbsp;</h4>
+          <button class="btn btn-default botao-esticado" ng-click="limpar()"><span class="glyphicon glyphicon-erase"></span> Limpar</button>
+        </div>
+        <div class="col-md-2">
+          <h4>&nbsp;</h4>
+          <button class="btn btn-default botao-esticado" ng-click="buscar()"><span class="glyphicon glyphicon-search"></span> Buscar</button>
+        </div>
+      </div>
+
+      <!--<br>-->
+      <!--<div class="row">-->
+        <!--<div class="col-md-3">-->
+          <!--<select class="form-control" ng-init="opt='pedido'" ng-model="opt">-->
+            <!--<option value="{{opcao.valor}}" ng-selected="opt===opcao.valor" ng-disabled="filtros.contains(opcao.valor)" ng-repeat="opcao in opcoes">{{opcao.nome}} {{opcao.desc}}</option>-->
+          <!--</select>-->
+        <!--</div>-->
+        <!--<div class="col-md-3">-->
+          <!--<button class="btn btn-default botao-esticado" ng-click="addFiltro(opt)" ng-disabled="filtros.length >= 4"><span class="glyphicon glyphicon-plus"></span> Adicionar Filtro</button>-->
+        <!--</div>-->
+        <!--<div class="col-md-3">-->
+          <!--<button class="btn btn-default botao-esticado" ng-click="removeFiltro()" ng-disabled="filtros.length <= 1"><span class="glyphicon glyphicon-minus"></span> Remover Filtro</button>-->
+        <!--</div>-->
+        <!--<div class="col-md-3">-->
+          <!--<button class="btn btn-default botao-esticado" ng-click=""><span class="glyphicon glyphicon-search"></span> Buscar</button>-->
+        <!--</div>-->
+      <!--</div>-->
+
       <br>
       <div class="row">
         <div class="col-md-12">
