--- a/app/partials/modalBuscarPessoa.html
+++ b/app/partials/modalBuscarPessoa.html
@@ -6,7 +6,7 @@
 
   <div class="body">
 
-    <div class="container">
+    <div class="container condensar-rows">
       <div class="row">
         <div class="col-md-4">
           <div><h4>Código</h4></div>
@@ -38,6 +38,10 @@
             </tr>
             </thead>
             <tbody>
+            <tr ng-if="!pessoas.length" ng-repeat="n in vazio">
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
             <tr ng-repeat="p in pessoas" ng-click="selecionarPessoa(p)">
               <td>{{p.codigo}}</td>
               <td>{{p.nome}}</td>
