--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -119,25 +119,26 @@ body {
   -webkit-justify-content: center;
   justify-content: center; }
 
-.opcoes {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 101;
-  opacity: 0;
-  display: none; }
-  .opcoes .container {
-    width: 100%; }
-  .opcoes .remove-padding > div {
-    padding: 8px; }
-
 .remove-padding {
   padding: 0; }
+
+.condensar-rows .col-xs-1, .condensar-rows .col-sm-1, .condensar-rows .col-md-1, .condensar-rows .col-lg-1, .condensar-rows .col-xs-2, .condensar-rows .col-sm-2, .condensar-rows .col-md-2, .condensar-rows .col-lg-2, .condensar-rows .col-xs-3, .condensar-rows .col-sm-3, .condensar-rows .col-md-3, .condensar-rows .col-lg-3, .condensar-rows .col-xs-4, .condensar-rows .col-sm-4, .condensar-rows .col-md-4, .condensar-rows .col-lg-4, .condensar-rows .col-xs-5, .condensar-rows .col-sm-5, .condensar-rows .col-md-5, .condensar-rows .col-lg-5, .condensar-rows .col-xs-6, .condensar-rows .col-sm-6, .condensar-rows .col-md-6, .condensar-rows .col-lg-6, .condensar-rows .col-xs-7, .condensar-rows .col-sm-7, .condensar-rows .col-md-7, .condensar-rows .col-lg-7, .condensar-rows .col-xs-8, .condensar-rows .col-sm-8, .condensar-rows .col-md-8, .condensar-rows .col-lg-8, .condensar-rows .col-xs-9, .condensar-rows .col-sm-9, .condensar-rows .col-md-9, .condensar-rows .col-lg-9, .condensar-rows .col-xs-10, .condensar-rows .col-sm-10, .condensar-rows .col-md-10, .condensar-rows .col-lg-10, .condensar-rows .col-xs-11, .condensar-rows .col-sm-11, .condensar-rows .col-md-11, .condensar-rows .col-lg-11, .condensar-rows .col-xs-12, .condensar-rows .col-sm-12, .condensar-rows .col-md-12, .condensar-rows .col-lg-12 {
+  padding-left: 4px;
+  padding-right: 4px; }
+  .condensar-rows .col-xs-1 > div, .condensar-rows .col-sm-1 > div, .condensar-rows .col-md-1 > div, .condensar-rows .col-lg-1 > div, .condensar-rows .col-xs-2 > div, .condensar-rows .col-sm-2 > div, .condensar-rows .col-md-2 > div, .condensar-rows .col-lg-2 > div, .condensar-rows .col-xs-3 > div, .condensar-rows .col-sm-3 > div, .condensar-rows .col-md-3 > div, .condensar-rows .col-lg-3 > div, .condensar-rows .col-xs-4 > div, .condensar-rows .col-sm-4 > div, .condensar-rows .col-md-4 > div, .condensar-rows .col-lg-4 > div, .condensar-rows .col-xs-5 > div, .condensar-rows .col-sm-5 > div, .condensar-rows .col-md-5 > div, .condensar-rows .col-lg-5 > div, .condensar-rows .col-xs-6 > div, .condensar-rows .col-sm-6 > div, .condensar-rows .col-md-6 > div, .condensar-rows .col-lg-6 > div, .condensar-rows .col-xs-7 > div, .condensar-rows .col-sm-7 > div, .condensar-rows .col-md-7 > div, .condensar-rows .col-lg-7 > div, .condensar-rows .col-xs-8 > div, .condensar-rows .col-sm-8 > div, .condensar-rows .col-md-8 > div, .condensar-rows .col-lg-8 > div, .condensar-rows .col-xs-9 > div, .condensar-rows .col-sm-9 > div, .condensar-rows .col-md-9 > div, .condensar-rows .col-lg-9 > div, .condensar-rows .col-xs-10 > div, .condensar-rows .col-sm-10 > div, .condensar-rows .col-md-10 > div, .condensar-rows .col-lg-10 > div, .condensar-rows .col-xs-11 > div, .condensar-rows .col-sm-11 > div, .condensar-rows .col-md-11 > div, .condensar-rows .col-lg-11 > div, .condensar-rows .col-xs-12 > div, .condensar-rows .col-sm-12 > div, .condensar-rows .col-md-12 > div, .condensar-rows .col-lg-12 > div {
+    padding: 0 !important; }
+
+.btn.btn-default {
+  color: #6481bb; }
+  .btn.btn-default:hover, .btn.btn-default:focus {
+    color: #6481bb; }
+
+input.form-control {
+  padding-left: 6px;
+  padding-right: 6px; }
+
+.botao-esticado {
+  width: 100%; }
 
 .div-display {
   background-color: #6481bb;
@@ -239,9 +240,6 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   visibility: hidden;
   clear: both; }
 
-.modal {
-  margin-top: 100px; }
-
 .meu-modal .header {
   background-color: #6481bb;
   height: 60px;
@@ -258,14 +256,11 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
       .meu-modal .header .title .close:hover {
         color: white; }
 .meu-modal .body {
-  height: 360px;
+  height: 460px;
   overflow-y: auto;
   padding: 15px; }
   .meu-modal .body h4 {
     color: #6481bb; }
-  .meu-modal .body div {
-    padding-left: 5px;
-    padding-right: 5px; }
   .meu-modal .body .container {
     width: 100%; }
 .meu-modal .footer {
@@ -295,6 +290,52 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   width: 20%; }
 #tabela-buscar-pessoas th:nth-child(2), #tabela-buscar-pessoas td:nth-child(2) {
   width: 80%; }
+
+.filtros .well {
+  padding: 8px;
+  min-height: 50px; }
+  .filtros .well > div {
+    height: 45px; }
+.filtros .filtro-sm, .filtros .filtro-md, .filtros .filtro-lg {
+  display: inline-block;
+  padding: 4px;
+  margin: 4px;
+  background-color: #3b5998;
+  border-radius: 6px;
+  width: 100%; }
+  .filtros .filtro-sm table, .filtros .filtro-md table, .filtros .filtro-lg table {
+    width: 100%; }
+    .filtros .filtro-sm table tr td:last-child, .filtros .filtro-md table tr td:last-child, .filtros .filtro-lg table tr td:last-child {
+      width: 30px; }
+  .filtros .filtro-sm i, .filtros .filtro-md i, .filtros .filtro-lg i {
+    color: white;
+    margin-top: 4px;
+    vertical-align: sub; }
+  .filtros .filtro-sm input, .filtros .filtro-md input, .filtros .filtro-lg input {
+    border-radius: 6px;
+    font-size: 1.2em;
+    border-color: transparent;
+    width: 100%;
+    text-align: center; }
+    .filtros .filtro-sm input:first-child, .filtros .filtro-md input:first-child, .filtros .filtro-lg input:first-child {
+      margin-left: 0; }
+    .filtros .filtro-sm input:last-child, .filtros .filtro-md input:last-child, .filtros .filtro-lg input:last-child {
+      margin-right: 0; }
+.filtros .filtro-lg table tr td:first-child {
+  width: 130px;
+  padding-right: 4px; }
+.filtros .filtro-lg table tr td:nth-child(2) {
+  padding-left: 4px; }
+.filtros .pedido {
+  background-color: #0086b3; }
+.filtros .vendedor {
+  background-color: goldenrod; }
+.filtros .cliente {
+  background-color: #006600; }
+.filtros .data-inicial {
+  background-color: orangered; }
+.filtros .data-final {
+  background-color: #880000; }
 
 .banner {
   background-image: url("../images/logotipo.png");
