--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -150,32 +150,60 @@ body {
   justify-content : center;
 }
 
-.opcoes {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: $fundo-preto-transparente;
-  z-index: 101;
-  opacity: 0;
-  display: none;
+//.opcoes {
+//  position: fixed;
+//  top: 0;
+//  bottom: 0;
+//  left: 0;
+//  right: 0;
+//  width: 100%;
+//  height: 100%;
+//  background-color: $fundo-preto-transparente;
+//  z-index: 101;
+//  opacity: 0;
+//  display: none;
+//
+//  .container {
+//    width: 100%;
+//  }
+//
+//  .remove-padding {
+//    > div {
+//      padding: 8px;
+//    }
+//  }
+//}
 
-  .container {
-    width: 100%;
-  }
+.remove-padding {
+  padding: 0;
+}
 
-  .remove-padding {
+.condensar-rows {
+  .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    padding-left: 4px;
+    padding-right: 4px;
+
     > div {
-      padding: 8px;
+      padding: 0!important;
     }
   }
 }
 
-.remove-padding {
-  padding: 0;
+.btn.btn-default {
+  color: $cor-principal-clara;
+
+  &:hover, &:focus {
+    color: $cor-principal-clara;
+  }
+}
+
+input.form-control{
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
+.botao-esticado {
+  width: 100%;
 }
 
 .div-display {
@@ -358,7 +386,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
 }
 
 .modal {
-  margin-top: 100px;
+  //margin-top: 100px;
 }
 
 .meu-modal {
@@ -389,18 +417,13 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   }
 
   .body {
-    height: 360px;
+    height: 460px;
     //max-height: 500px;
     overflow-y: auto;
     padding: 15px;
 
     h4 {
       color: $cor-principal-clara;
-    }
-
-    div {
-      padding-left: 5px;
-      padding-right: 5px;
     }
 
     .container {
@@ -458,6 +481,100 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
     &:nth-child(2) {
       width: 80%;
     }
+  }
+}
+
+.filtros {
+  .well {
+    padding: 8px;
+    min-height: 50px;
+
+    > div {
+      //padding: 0;
+      //margin: 4px;
+      height: 45px;
+    }
+  }
+
+  .filtro-sm, .filtro-md, .filtro-lg {
+    display: inline-block;
+    padding: 4px;
+    margin: 4px;
+    background-color: $cor-principal;
+    border-radius: 6px;
+    width: 100%;
+
+    table {
+      width: 100%;
+      tr td {
+        &:last-child {
+          width: 30px;
+        }
+      }
+    }
+
+    i {
+      color: white;
+      margin-top: 4px;
+      vertical-align: sub;
+    }
+
+    input {
+      border-radius: 6px;
+      font-size: 1.2em;
+      border-color: transparent;
+      width: 100%;
+      text-align: center;
+
+      &:first-child {
+        margin-left: 0;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .filtro-sm {
+
+  }
+
+  .filtro-md {
+
+  }
+
+  .filtro-lg {
+    table tr td {
+      &:first-child {
+        width: 130px;
+        padding-right: 4px;
+      }
+
+      &:nth-child(2) {
+        padding-left: 4px;
+      }
+    }
+  }
+
+  .pedido {
+    background-color: #0086b3;
+  }
+
+  .vendedor {
+    background-color: goldenrod;
+  }
+
+  .cliente {
+    background-color: #006600;
+  }
+
+  .data-inicial {
+    background-color: orangered;
+  }
+
+  .data-final {
+    background-color: #880000;
   }
 }
 
