--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -4,15 +4,11 @@
     <div class="col-sm-6 col-md-3">
       <button class="btn-orcamento" ng-click="orcamento.limpar(true)"><span class="glyphicon glyphicon-pencil"></span> Novo</button>
     </div>
-    <div class="col-sm-6 col-md-3">
-
-    </div>
-    <div class="col-sm-6 col-md-3">
-
-    </div>
-    <div class="col-sm-6 col-md-3">
-      <!--<button class="btn-orcamento" ng-click="mostrarOpcoes()"><span class="glyphicon glyphicon-trash"></span> Excluir</button>-->
+    <div class="col-sm-6 col-md-4 col-md-offset-1">
       <button class="btn-orcamento" ng-click="lista()"><span class="glyphicon glyphicon-list-alt"></span> Recuperar</button>
+    </div>
+    <div class="col-sm-6 col-md-3 col-md-offset-1">
+      <button class="btn-orcamento" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash"></span> Excluir</button>
     </div>
   </div>
 
