--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,10 @@
 <p>This is the about view.</p>
+
+F1
+<input type="text" key-shortcuts f1="about.teste('f1')">
+
+ENTER
+<input type="text" key-shortcuts enter="about.teste('enter')">
+
+SHIFT + ENTER
+<input type="text" key-shortcuts shift-enter="about.teste('shift + enter')">
