--- a/app/partials/modalBuscarPedido.html
+++ b/app/partials/modalBuscarPedido.html
@@ -94,34 +94,34 @@
 
         <div class="col-md-3" ng-show="opt == 'pedido'">
           <h4>Código</h4>
-          <input type="text" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" press-enter="buscarPorCodigoPedido(cdPedido)" ui-mask="999999">
+          <input type="text" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" key-shortcuts enter="buscarPorCodigoPedido(cdPedido)" ui-mask="999999">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'vendedor'">
           <h4>Código</h4>
-          <input type="text" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" press-enter="buscarPorCodigoVendedor(cdVendedor)" ui-mask="9999">
+          <input type="text" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" key-shortcuts enter="buscarPorCodigoVendedor(cdVendedor)" ui-mask="9999">
         </div>
         <div class="col-md-6" ng-show="opt == 'vendedor'">
           <h4>Nome</h4>
-          <input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" press-enter="buscarPorNomeVendedor(nmVendedor)">
+          <input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" key-shortcuts enter="buscarPorNomeVendedor(nmVendedor)">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'cliente'">
           <h4>Código</h4>
-          <input type="text" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" press-enter="buscarPorCodigoCliente(cdCliente)" ui-mask="999999">
+          <input type="text" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" key-shortcuts enter="buscarPorCodigoCliente(cdCliente)" ui-mask="999999">
         </div>
         <div class="col-md-6" ng-show="opt == 'cliente'">
           <h4>Nome</h4>
-          <input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" press-enter="buscarPorNomeCliente(nmCliente)">
+          <input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" key-shortcuts enter="buscarPorNomeCliente(nmCliente)">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'data'">
           <h4>Inicial</h4>
-          <input type="text" class="form-control" name="dtInicial" aria-describedby="basic-addon2" ng-model="dtInicial" press-enter="" ui-mask="99/99/9999" model-view-value="true">
+          <input type="text" class="form-control" name="dtInicial" aria-describedby="basic-addon2" ng-model="dtInicial" key-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
         </div>
         <div class="col-md-3" ng-show="opt == 'data'">
           <h4>Final</h4>
-          <input type="text" class="form-control" name="dtFinal" aria-describedby="basic-addon2" ng-model="dtFinal" press-enter="" ui-mask="99/99/9999" model-view-value="true">
+          <input type="text" class="form-control" name="dtFinal" aria-describedby="basic-addon2" ng-model="dtFinal" key-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
         </div>
 
       </div>
@@ -130,36 +130,36 @@
         <div class="col-md-2">
           <h4>Orçamento</h4>
             <div class="input-group">
-              <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" press-enter="buscar()">
+              <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" key-shortcuts enter="buscar()">
               <span class="input-group-btn">
-                <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="cdPedido=''"></span></button>
+                <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
               </span>
             </div>
         </div>
         <div class="col-md-2">
           <h4>Data Inicial</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" press-enter="buscar()">
+            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" key-shortcuts enter="buscar()">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="dtInicial=''"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
           </div>
         </div>
         <div class="col-md-2">
           <h4>Data Final</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" press-enter="buscar()">
+            <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" key-shortcuts enter="buscar()">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="dtFinal=''"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
           </div>
         </div>
         <div class="col-md-6">
           <h4>Vendedor</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-value="vendedor.codigo + (vendedor.codigo?' - ':'') + vendedor.nome" placeholder="Clique na lupa para buscar um vendedor" readonly="true" press-enter="buscar()">
+            <input type="text" class="form-control" ng-value="vendedor.codigo + (vendedor.codigo?' - ':'') + vendedor.nome" placeholder="Clique na lupa para buscar um vendedor" readonly="true" key-shortcuts enter="buscar()">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="removeVendedor()"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="removeVendedor()"><span class="glyphicon glyphicon-remove"></span></button>
               <button class="btn btn-default" tabindex="-1" ng-click="buscarVendedor()"><span class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
@@ -169,7 +169,7 @@
           <div class="input-group">
             <input type="text" class="form-control" ng-value="cliente.codigo + (cliente.codigo?' - ':'') + cliente.nome" placeholder="Clique na lupa para buscar um cliente" readonly="true">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1"><span class="glyphicon glyphicon-remove" ng-click="removeCliente()"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="removeCliente()"><span class="glyphicon glyphicon-remove"></span></button>
               <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
@@ -220,6 +220,13 @@
             </tr>
             </thead>
             <tbody>
+            <tr ng-if="!pedidos.length" ng-repeat="v in vazio">
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
             <tr ng-repeat="p in pedidos" ng-click="selecionarPedido(p)">
               <td>{{p.codigo}}</td>
               <td>{{p.vendedor.nome}}</td>
