--- a/app/partials/opcoesOrcamento.html
+++ b/app/partials/opcoesOrcamento.html
@@ -1,73 +1,21 @@
 <div class="vertical-center">
   <div class="container">
-    <div class="row">
-
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 remove-padding">
-        <div class="col-md-12">
-          <div class="botao-menu-barra highlight" ng-click="orcamento.limpar(true)">
-            <div class="centerX centerY">
-              <p><span class="glyphicon glyphicon-pencil"></span> Novo</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 remove-padding">
-        <div class="col-xs-6">
-          <div class="botao-menu highlight" ng-click="orcamento.salvar()">
-            <div class="centerX centerY">
-              <span class="glyphicon glyphicon-floppy-save"></span>
-              <p>Salvar</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-6">
-          <div class="botao-menu highlight" ng-click="orcamento.imprimir()">
-            <div class="centerX centerY">
-              <span class="glyphicon glyphicon-print"></span>
-              <p>Imprimir</p>
-            </div>
-          </div>
-        </div>
-        <!--<div class="col-xs-6">-->
-          <!--<div class="botao-menu highlight" ng-click="orcamento.salvar()">-->
-            <!--<div class="centerX centerY">-->
-              <!--<span class="glyphicon glyphicon-credit-card"></span>-->
-              <!--<p>Pagamento</p>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
-      </div>
-
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 remove-padding">
-        <div class="col-xs-6">
-          <div class="botao-menu highlight" ng-click="orcamento.enviar()">
-            <div class="centerX centerY">
-              <span class="glyphicon glyphicon-envelope"></span>
-              <p>Enviar</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-6">
-          <div class="botao-menu highlight" ng-click="orcamento.excluir()">
-            <div class="centerX centerY">
-              <span class="glyphicon glyphicon-trash"></span>
-              <p>Excluir</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 remove-padding">
-        <div class="col-md-12">
-          <div class="botao-menu-barra highlight" ng-click="ocultarOpcoes()">
-            <div class="centerX centerY">
-              <p><span class="glyphicon glyphicon-remove"></span> Fechar</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
+    <div class="header">
+      <span class="glyphicon glyphicon-ok"></span>
+      Orçamento salvo!
+      <span class="glyphicon glyphicon-remove close" ng-click="ocultarOpcoes()"></span>
+    </div>
+    <div class="body">
+      <h2>Código: {{orcamento.pedido.codigo}}</h2>
+      <br>
+      <br>
+      <button class="btn-orcamento" ng-click="orcamento.imprimir()"><span class="glyphicon glyphicon-print"></span> Imprimir</button>
+      <br>
+      <br>
+      <button class="btn-orcamento" ng-click="orcamento.enviar()"><span class="glyphicon glyphicon-envelope"></span> Email</button>
+    </div>
+    <div class="footer">
+      <button class="btn btn-default" ng-click="ocultarOpcoes()"><span class="glyphicon glyphicon-remove"></span> Fechar</button>
     </div>
   </div>
 </div>
