--- a/app/partials/produtosTypeaheadPopup.html
+++ b/app/partials/produtosTypeaheadPopup.html
@@ -1,4 +1,4 @@
-<!--<a ng-href="{{match.model.buscar}}" press-enter="match.model.action()">-->
+<!--<a ng-href="{{match.model.buscar}}" key-shortcuts enter="match.model.action()">-->
 <a href="">
   <span ng-if="match.model.CdProduto != -1">{{match.model.CdProduto}} - </span>
   <span ng-bind-html="match.model.NmProduto | uibTypeaheadHighlight:query"></span>
