--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -150,30 +150,6 @@ body {
   justify-content : center;
 }
 
-//.opcoes {
-//  position: fixed;
-//  top: 0;
-//  bottom: 0;
-//  left: 0;
-//  right: 0;
-//  width: 100%;
-//  height: 100%;
-//  background-color: $fundo-preto-transparente;
-//  z-index: 101;
-//  opacity: 0;
-//  display: none;
-//
-//  .container {
-//    width: 100%;
-//  }
-//
-//  .remove-padding {
-//    > div {
-//      padding: 8px;
-//    }
-//  }
-//}
-
 .remove-padding {
   padding: 0;
 }
@@ -230,6 +206,10 @@ input.form-control{
     width: 100%;
     height: 100%;
   }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: $cor-principal-clara;
 }
 
 textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:focus, .btn:active:focus {
@@ -421,10 +401,6 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
     //max-height: 500px;
     overflow-y: auto;
     padding: 15px;
-
-    h4 {
-      color: $cor-principal-clara;
-    }
 
     .container {
       width: 100%;
