--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -22,7 +22,7 @@
           {{orcamento.pedido.codigo ? ('criado em ' + (orcamento.pedido.dataPedido | date:'dd/MM/yyyy')) : ''}}
           {{orcamento.pedido.codigo ? '' : 'Novo Orçamento'}}
         </h3>
-        <a href="" style="float: right; margin-top: -36px;font-size: 1.5em;margin-right: 10px" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash"></span></a>
+        <!--<a href="" style="float: right; margin-top: -36px;font-size: 1.5em;margin-right: 10px" ng-click="orcamento.excluir()"><span class="glyphicon glyphicon-trash"></span></a>-->
       </div>
     </div>
     <!--<div class="col-sm-12 col-md-12"><br></div>-->
@@ -45,9 +45,9 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="text" number-only name="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" press-enter="orcamento.buscaVendedorPorCodigo(cdVendedor, true)" press-shift-enter="orcamento.escapeVendedor()">
+          <input type="text" number-only name="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" key-shortcuts enter="orcamento.buscaVendedorPorCodigo(cdVendedor)" shift-enter="orcamento.escapeVendedor()" f1="orcamento.buscaVendedorPorCodigo()">
           <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo(cdVendedor)"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo()"><span class="glyphicon glyphicon-search"></span></button>
           </span>
         </div>
       </div>
@@ -76,19 +76,22 @@
     <div class="col-md-12" id="controle-tabela-orcamento" uib-collapse="!formularios.produtos">
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
-        <div class="input-group">
-          <input name="CdProduto" type="text" number-only class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" ng-readonly="" press-enter="orcamento.buscaProdutoPorCodigo(cdProduto)" press-shift-enter="orcamento.escapeProdutos()" maxlength="6">
-          <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)"><span class="glyphicon glyphicon-search"></span></button>
-          </span>
+        <!--<div class="input-group">-->
+        <div>
+          <input name="CdProduto" type="text" number-only class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" key-shortcuts enter="orcamento.buscaProdutoPorCodigo(cdProduto)" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()" maxlength="6">
         </div>
+          <!--<span class="input-group-btn">-->
+            <!--<button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)"><span class="glyphicon glyphicon-search"></span></button>-->
+          <!--</span>-->
+        <!--</div>-->
       </div>
       <div class="col-xs-5 col-sm-6">
         <div><h4>Descrição</h4></div>
         <div>
           <input name="NmProduto" type="text" class="form-control" ng-model="nmProduto" ng-readonly="" ng-blur="blurProduto()"
-                 press-enter="orcamento.avancar('input', 'quantidade')"
-                 press-shift-enter="orcamento.escapeProdutos()"
+                 key-shortcuts enter="orcamento.avancar('input', 'quantidade')"
+                 shift-enter="orcamento.escapeProdutos()"
+                 f1="orcamento.pesquisarProdutoNoModal()"
                  uib-typeahead="produto as produto.NmProduto for produto in orcamento.buscaProdutoPorDescricao($viewValue)"
                  typeahead-template-url="partials/produtosTypeaheadPopup.html"
                  typeahead-min-length="typeahead.min_length"
@@ -107,14 +110,14 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Quantidade</h4></div>
         <div class="input-group">
-          <input name="quantidade" type="text" class="form-control" filtro-moeda number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" press-enter="item.quantidade <= 0 ? orcamento.limparProdutoTemp() : orcamento.addItem()" press-shift-enter="orcamento.escapeProdutos()">
+          <input name="quantidade" type="text" class="form-control" filtro-moeda number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" key-shortcuts enter="item.quantidade <= 0 ? orcamento.limparProdutoTemp() : orcamento.addItem()" shift-enter="orcamento.escapeProdutos()">
           <span class="input-group-addon">{{item.produto.unidade || '(un)'}}</span>
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Desconto %</h4></div>
         <div class="input-group">
-          <input name="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" press-enter="orcamento.avancar('input', 'dinheiro')" press-shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
+          <input name="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" key-shortcuts enter="orcamento.avancar('input', 'dinheiro')" shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
           <span class="input-group-addon">%</span>
         </div>
       </div>
@@ -122,7 +125,7 @@
         <div><h4>Desconto R$</h4></div>
         <div class="input-group">
           <span class="input-group-addon">R$</span>
-          <input name="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" press-enter="orcamento.addItem()" press-shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
+          <input name="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" key-shortcuts enter="orcamento.addItem()" shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -196,7 +199,7 @@
       <div class="head">
         <h3>Cliente
           <span ng-if="!formularios.cliente && orcamento.pedido.cliente.nome"> &raquo; ({{cliente.novo ? 'Novo Cliente' : orcamento.pedido.cliente.codigo}} - {{orcamento.pedido.cliente.nome}})</span>
-          <a href="" class="limpar" title="Limpar campos" ng-click="orcamento.limparCliente($event)"><span class="glyphicon glyphicon-erase"></span></a>
+          <a href="" class="limpar" title="Limpar campos" ng-click="orcamento.limparCliente($event, true)"><span class="glyphicon glyphicon-erase"></span></a>
           <a href=""><span ng-if="formularios.cliente" class="glyphicon glyphicon-menu-up"></span></a>
           <a href=""><span ng-if="!formularios.cliente" class="glyphicon glyphicon-menu-down"></span></a>
         </h3>
@@ -206,9 +209,9 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" press-enter="orcamento.buscaClientePorCodigo(cdCliente, true)" press-shift-enter="orcamento.salvar()" ng-readonly="cliente.novo" maxlength="6">
+          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" key-shortcuts enter="orcamento.buscaClientePorCodigo(cdCliente)" shift-enter="orcamento.salvar()" f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6">
           <span class="input-group-btn">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo(cdCliente)" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-plus"></span></button>
           </span>
         </div>
@@ -216,13 +219,13 @@
       <div class="col-xs-9 col-sm-9">
         <div><h4>Nome <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('select', 'tipo')" press-shift-enter="orcamento.salvar()" maxlength="60">
+          <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('select', 'tipo')" shift-enter="orcamento.salvar()" maxlength="60">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Tipo <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <select name="tipo" class="form-control" ng-model="orcamento.pedido.cliente.tipo"  ng-disabled="!cliente.novo" press-enter="orcamento.avancar('input', orcamento.pedido.cliente.tipo === 'F' ? 'cpf' : 'cnpj')" press-shift-enter="orcamento.salvar()">
+          <select name="tipo" class="form-control" ng-model="orcamento.pedido.cliente.tipo"  ng-disabled="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', orcamento.pedido.cliente.tipo === 'F' ? 'cpf' : 'cnpj')" shift-enter="orcamento.salvar()">
             <option value="F">Pessoa Física</option>
             <option value="J">Pessoa Jurídica</option>
           </select>
@@ -231,29 +234,29 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>CPF <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cpf" ui-mask="999.999.999-99" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'F'" press-enter="orcamento.avancar('input', 'cep')" press-shift-enter="orcamento.salvar()" ng-change="onchangeCPF()">
+          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cpf" ui-mask="999.999.999-99" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'F'" key-shortcuts enter="orcamento.avancar('input', 'cep')" shift-enter="orcamento.salvar()" ng-change="onchangeCPF()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>CNPJ <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="cnpj" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cnpj" ui-mask="99.999.999/9999-99" ng-readonly="!cliente.novo  || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'iEstadual')" press-shift-enter="orcamento.salvar()" ng-change="onchangeCNPJ()">
+          <input name="cnpj" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cnpj" ui-mask="99.999.999/9999-99" ng-readonly="!cliente.novo  || orcamento.pedido.cliente.tipo !== 'J'" key-shortcuts enter="orcamento.avancar('input', 'iEstadual')" shift-enter="orcamento.salvar()" ng-change="onchangeCNPJ()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Inscrição Estadual <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="iEstadual" type="text" class="form-control" ng-model="orcamento.pedido.cliente.iEstadual" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'J'" press-enter="orcamento.avancar('input', 'cep')" press-shift-enter="orcamento.salvar()" maxlength="20">
+          <input name="iEstadual" type="text" class="form-control" ng-model="orcamento.pedido.cliente.iEstadual" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'J'" key-shortcuts enter="orcamento.avancar('input', 'cep')" shift-enter="orcamento.salvar()" maxlength="20">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3" style="padding: 0;">
         <div class="col-sm-8">
           <div><h4>CEP <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
           <div ng-class="cliente.novo ? 'input-group' : ''">
-            <input name="cep" type="text" class="form-control" press-enter="cdCEP == orcamento.pedido.cliente.endereco.cep ? orcamento.avancar('input', 'endNumero') : orcamento.buscarCEP()" press-shift-enter="orcamento.salvar()" ng-readonly="!cliente.novo" ng-model="cdCEP" ui-mask="99999-999" ng-blur="blurCdCEP()">
-          <span class="input-group-btn" ng-hide="!cliente.novo">
-            <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscarCEP()"><span class="glyphicon glyphicon-search"></span></button>
-          </span>
+            <input name="cep" type="text" class="form-control" key-shortcuts enter="cdCEP == orcamento.pedido.cliente.endereco.cep ? orcamento.avancar('input', 'endNumero') : orcamento.buscarCEP()" shift-enter="orcamento.salvar()" f1="orcamento.buscarCEP(true)" ng-readonly="!cliente.novo" ng-model="cdCEP" ui-mask="99999-999" ng-blur="blurCdCEP()">
+            <span class="input-group-btn" ng-hide="!cliente.novo">
+              <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscarCEP(true)"><span class="glyphicon glyphicon-search"></span></button>
+            </span>
           </div>
         </div>
         <div class="col-sm-4">
@@ -274,7 +277,7 @@
           <!--NUMERO-->
           <div><h4>&#8470; <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
           <div>
-            <input name="endNumero" type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero" press-enter="orcamento.avancar('input', 'tel-cliente')" press-shift-enter="orcamento.salvar()" maxlength="10">
+            <input name="endNumero" type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero" key-shortcuts enter="orcamento.avancar('input', 'tel-cliente')" shift-enter="orcamento.salvar()" maxlength="10">
           </div>
         </div>
       </div>
@@ -294,23 +297,23 @@
         <div><h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div class="input-group">
           <span class="input-group-addon">&nbsp;({{orcamento.pedido.cliente.endereco.ddd || 'DDD'}})&nbsp;</span>
-          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ui-mask="9999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'ddd-cel-cliente')" press-shift-enter="orcamento.salvar()">
+          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ui-mask="9999-9999" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', 'ddd-cel-cliente')" shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div class="col-sm-4">
           <div><h4>DDD </h4></div>
-          <input name="ddd-cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'cel-cliente')" press-shift-enter="orcamento.salvar()">
+          <input name="ddd-cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', 'cel-cliente')" shift-enter="orcamento.salvar()">
         </div>
         <div class="col-sm-8">
           <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo" press-enter="orcamento.avancar('input', 'email-cliente')" press-shift-enter="orcamento.salvar()">
+          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', 'email-cliente')" shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div>
-          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" press-enter="" press-shift-enter="orcamento.salvar()" maxlength="50">
+          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" key-shortcuts enter="" shift-enter="orcamento.salvar()" maxlength="50">
         </div>
       </div>
 
@@ -380,7 +383,7 @@
     <!--</div>-->
   </div>
 
-  <!--<div ng-include="'partials/opcoesOrcamento.html'" class="opcoes"></div>-->
+  <div ng-include="'partials/opcoesOrcamento.html'" class="opcoes"></div>
 
 </div>
 
