--- a/app/views/about.html
+++ b/app/views/about.html
@@ -8,3 +8,11 @@ ENTER
 
 SHIFT + ENTER
 <input type="text" key-shortcuts shift-enter="about.teste('shift + enter')">
+
+Testes
+<button ng-click="about.click($event)">OK</button>
+
+<key-shortcuts f1="about.click('oi')"></key-shortcuts>
+
+<br>
+<relogio></relogio>
