--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,5 +1,6 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
   <!--<div class="footer">-->
-  <div>
+  <div class="footer">
+    <span class="agencia"><a href="http://www.futuraagencia.com.br/" target="_blank">Futura Agência</a> - Commercial ver. 0.7.1 2016</span>
   </div>
 </div>
