--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -143,10 +143,31 @@ $print-font-size: 11px;
   @extend .tabela;
   @extend .tabela-header-fixo;
 
+  border: 2px solid $cor-principal-clara;
+
   th, td {
-    &:nth-child(1), &:nth-child(3), &:nth-child(4), &:nth-child(5),
-    &:nth-child(6), &:nth-child(7), &:nth-child(8), &:nth-child(9) {
-      width: 7.5%;
+    white-space: nowrap;
+
+    //&:nth-child(1), &:nth-child(3), &:nth-child(4), &:nth-child(5),
+    //&:nth-child(6), &:nth-child(7), &:nth-child(8), &:nth-child(9) {
+    //  width: 7.5%;
+    //}
+
+    &:nth-child(1), &:nth-child(5),
+    &:nth-child(6), &:nth-child(7), &:nth-child(8) {
+      width: 9%;
+    }
+
+    &:nth-child(3) {
+      width: 5.5%;
+    }
+
+    &:nth-child(4) {
+      width: 6.5%;
+    }
+
+    &:nth-child(9) {
+      width: 3%;
     }
 
     &:nth-child(2) {
