--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -11,7 +11,7 @@
     <br>
     <table class="dados">
       <tr>
-        <td><h5>Cliente: </h5>{{orcamento.pedido.cliente.nome}}</td>
+        <td><h5>Cliente: </h5>({{orcamento.pedido.cliente.codigo}}) {{orcamento.pedido.cliente.nome}}</td>
         <td><h5>CPF/CNPJ: </h5>{{orcamento.pedido.cliente.cpf || orcamento.pedido.cliente.cnpj}}</td>
         <td><h5>Insc. Est.: </h5>{{orcamento.pedido.cliente.iEstadual}}</td>
       </tr>
@@ -26,7 +26,7 @@
         <td><h5>email: </h5>{{orcamento.pedido.cliente.email}}</td>
       </tr>
       <tr>
-        <td><h5>Vendedor: </h5>{{orcamento.pedido.vendedor.codigo}} {{orcamento.pedido.vendedor.nome}}</td>
+        <td><h5>Vendedor: </h5>({{orcamento.pedido.vendedor.codigo}}) {{orcamento.pedido.vendedor.nome}}</td>
         <td><h5>Loja: </h5></td>
         <td><h5>Data da emissão: </h5>{{orcamento.pedido.dataPedido | date: 'dd/MM/yyyy'}}</td>
       </tr>
@@ -35,33 +35,45 @@
     <br>
     <div ng-repeat="bloco in orcamento.pedido.blocos track by $index">
       <p ng-class="$index > 0 ? 'quebra' : ''"></p>
-      <div class="cabecalho" ng-if="$index > 0 ? 'margem' : ''">
+      <div class="cabecalho" ng-if="$index > 0">
         <div class="logo"><img src="./images/carrapeta.jpg" alt=""></div>
         <br>
         <h4 class="orcamento-identificacao">Orçamento n&#186;: {{orcamento.pedido.codigo}}</h4>
         <br>
-        <span class="data"><h5>Data da impressão: </h5>{{hoje | date: 'longDate'}}</span>
+        <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'longDate'}}</span>
       </div>
       <table class="tabela" ng-class="$index > 0 ? 'margem' : ''">
-        <thead>
-        <th>CÓDIGO</th>
-        <th>DESCRIÇÃO</th>
-        <th>UND</th>
-        <th>QTD</th>
-        <th>PREÇO</th>
-        <th>TOTAL</th>
-        </thead>
+        <!--<thead>-->
+          <tr>
+            <th>CÓDIGO</th>
+            <th>DESCRIÇÃO</th>
+            <th>UND</th>
+            <th>QTD</th>
+            <th>PREÇO</th>
+            <th>TOTAL</th>
+          </tr>
+        <!--</thead>-->
         <tbody>
-        <tr ng-repeat="i in bloco">
-          <td>{{i.produto.codigo}}</td>
-          <td>{{i.produto.nome}}</td>
-          <td>{{i.produto.unidade}}</td>
-          <td>{{i.quantidade}}</td>
-          <td>{{i.produto.preco  | currency: 'R$ '}}</td>
-          <td>{{(i.quantidade * i.produto.preco) | currency: 'R$ '}}</td>
-        </tr>
+          <tr ng-repeat="i in bloco">
+            <td>{{i.produto.codigo}}</td>
+            <td>{{i.produto.nome | truncate: '60'}}</td>
+            <td>{{i.produto.unidade}}</td>
+            <td>{{i.quantidade}}</td>
+            <td>{{i.produto.preco  | currency: 'R$ '}}</td>
+            <td>{{(i.quantidade * i.produto.preco) | currency: 'R$ '}}</td>
+          </tr>
         </tbody>
       </table>
+      <span ng-init="max=orcamento.pedido.blocos.length==1?15:($index==0?15:($index+1>=orcamento.pedido.blocos.length?15:30))"></span>
+      <div class="espacador" ng-repeat="n in getNumber(max - (bloco.length >= max ? max : bloco.length)) track by $index"></div>
+      <p ng-class="{ 'quebra': $index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18 }"></p>
+      <div class="cabecalho" ng-if="$index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18">
+        <div class="logo"><img src="./images/carrapeta.jpg" alt=""></div>
+        <br>
+        <h4 class="orcamento-identificacao">Orçamento n&#186;: {{orcamento.pedido.codigo}}</h4>
+        <br>
+        <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'longDate'}}</span>
+      </div>
     </div>
     <table class="totais">
       <tr>
