--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -1,4 +1,4 @@
-<div id="formulario-orcamento">
+<div id="formulario-orcamento" key-shortcuts>
 
   <div class="row">
     <div class="col-sm-6 col-md-3">
@@ -209,7 +209,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" key-shortcuts enter="orcamento.buscaClientePorCodigo(cdCliente)" shift-enter="orcamento.salvar()" f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6">
+          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" key-shortcuts enter="orcamento.buscaClientePorCodigo(cdCliente)" shift-enter="orcamento.pagamento(true)" f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-plus"></span></button>
